// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main test suite should render properly in JSON 1`] = `
<View
  style={
    Object {
      "height": "100%",
      "left": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        },
        Object {
          "position": "relative",
        },
      ]
    }
  >
    <RCTScrollView
      horizontal={true}
      style={
        Object {
          "backgroundColor": "#1F2937",
        }
      }
    >
      <View>
        <RCTScrollView
          nestedScrollEnabled={true}
          style={
            Object {
              "paddingBottom": 20,
              "paddingHorizontal": 16,
              "paddingTop": 20,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "backgroundColor": "#1F2937",
                  "padding": 5,
                }
              }
            >
              <View
                style={
                  Object {
                    "marginLeft": 0,
                    "paddingBottom": 5,
                    "paddingLeft": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                    }
                  }
                >
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                          "paddingLeft": 0,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <Text
                        style={
                          Object {
                            "color": "#F9FAFB",
                            "fontSize": 15,
                            "marginLeft": 0,
                            "transform": Array [
                              Object {
                                "rotate": "90deg",
                              },
                            ],
                          }
                        }
                      >
                        ▶
                      </Text>
                    </View>
                  </View>
                  <Text
                    onPress={[Function]}
                    style={
                      Object {
                        "color": "#F9FAFB",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#F9FAFB",
                          "fontSize": 14,
                        }
                      }
                    >
                      root : 
                    </Text>
                  </Text>
                  <Text
                    onPress={[Function]}
                    style={
                      Object {
                        "color": "#06B6D4",
                        "marginLeft": 5,
                      }
                    }
                  >
                    <Text>
                      <Text>
                        {}
                      </Text>
                       
                      7 keys
                    </Text>
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "marginLeft": 10,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "marginLeft": 7,
                        "paddingBottom": 5,
                        "paddingLeft": 0,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                        }
                      }
                    >
                      <View
                        accessible={true}
                        focusable={true}
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "opacity": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "flexDirection": "row",
                              "paddingLeft": 0,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <Text
                            style={
                              Object {
                                "color": "#F9FAFB",
                                "fontSize": 15,
                                "marginLeft": 0,
                                "transform": Array [
                                  Object {
                                    "rotate": "0deg",
                                  },
                                ],
                              }
                            }
                          >
                            ▶
                          </Text>
                        </View>
                      </View>
                      <Text
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#F9FAFB",
                            "flexDirection": "row",
                          }
                        }
                      >
                        <Text
                          style={
                            Object {
                              "color": "#F9FAFB",
                              "fontSize": 14,
                            }
                          }
                        >
                          args,root : 
                        </Text>
                      </Text>
                      <Text
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#4D7C0F",
                            "marginLeft": 5,
                          }
                        }
                      >
                        <Text>
                          <Text>
                            {}
                          </Text>
                           
                          1 key
                        </Text>
                      </Text>
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "marginLeft": 7,
                        "paddingBottom": 5,
                        "paddingLeft": 0,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                        }
                      }
                    >
                      <View
                        accessible={true}
                        focusable={true}
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "opacity": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "flexDirection": "row",
                              "paddingLeft": 0,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <Text
                            style={
                              Object {
                                "color": "#F9FAFB",
                                "fontSize": 15,
                                "marginLeft": 0,
                                "transform": Array [
                                  Object {
                                    "rotate": "0deg",
                                  },
                                ],
                              }
                            }
                          >
                            ▶
                          </Text>
                        </View>
                      </View>
                      <Text
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#F9FAFB",
                            "flexDirection": "row",
                          }
                        }
                      >
                        <Text
                          style={
                            Object {
                              "color": "#F9FAFB",
                              "fontSize": 14,
                            }
                          }
                        >
                          data,root : 
                        </Text>
                      </Text>
                      <Text
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#4D7C0F",
                            "marginLeft": 5,
                          }
                        }
                      >
                        <Text>
                          <Text>
                            {}
                          </Text>
                           
                          1 key
                        </Text>
                      </Text>
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "marginLeft": 7,
                        "paddingBottom": 5,
                        "paddingLeft": 3,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                        }
                      }
                    >
                      <Text
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#F9FAFB",
                            "flexDirection": "row",
                          }
                        }
                      >
                        <Text
                          style={
                            Object {
                              "color": "#F9FAFB",
                              "fontSize": 14,
                            }
                          }
                        >
                          files,root : 
                        </Text>
                      </Text>
                      <Text
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#4D7C0F",
                            "marginLeft": 5,
                          }
                        }
                      >
                        <Text>
                          <Text>
                            {}
                          </Text>
                           
                          0 keys
                        </Text>
                      </Text>
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "marginLeft": 7,
                        "paddingBottom": 5,
                        "paddingLeft": 3,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                        }
                      }
                    >
                      <Text
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#F9FAFB",
                            "flexDirection": "row",
                          }
                        }
                      >
                        <Text
                          style={
                            Object {
                              "color": "#F9FAFB",
                              "fontSize": 14,
                            }
                          }
                        >
                          form,root : 
                        </Text>
                      </Text>
                      <Text
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#4D7C0F",
                            "marginLeft": 5,
                          }
                        }
                      >
                        <Text>
                          <Text>
                            {}
                          </Text>
                           
                          0 keys
                        </Text>
                      </Text>
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "marginLeft": 7,
                        "paddingBottom": 5,
                        "paddingLeft": 0,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                        }
                      }
                    >
                      <View
                        accessible={true}
                        focusable={true}
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "opacity": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "flexDirection": "row",
                              "paddingLeft": 0,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <Text
                            style={
                              Object {
                                "color": "#F9FAFB",
                                "fontSize": 15,
                                "marginLeft": 0,
                                "transform": Array [
                                  Object {
                                    "rotate": "0deg",
                                  },
                                ],
                              }
                            }
                          >
                            ▶
                          </Text>
                        </View>
                      </View>
                      <Text
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#F9FAFB",
                            "flexDirection": "row",
                          }
                        }
                      >
                        <Text
                          style={
                            Object {
                              "color": "#F9FAFB",
                              "fontSize": 14,
                            }
                          }
                        >
                          headers,root : 
                        </Text>
                      </Text>
                      <Text
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#4D7C0F",
                            "marginLeft": 5,
                          }
                        }
                      >
                        <Text>
                          <Text>
                            {}
                          </Text>
                           
                          14 keys
                        </Text>
                      </Text>
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "marginLeft": 7,
                        "paddingBottom": 5,
                        "paddingLeft": 0,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                        }
                      }
                    >
                      <View
                        accessible={true}
                        focusable={true}
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "opacity": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "flexDirection": "row",
                              "paddingLeft": 0,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <Text
                            style={
                              Object {
                                "color": "#F9FAFB",
                                "fontSize": 15,
                                "marginLeft": 0,
                                "transform": Array [
                                  Object {
                                    "rotate": "0deg",
                                  },
                                ],
                              }
                            }
                          >
                            ▶
                          </Text>
                        </View>
                      </View>
                      <Text
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#F9FAFB",
                            "flexDirection": "row",
                          }
                        }
                      >
                        <Text
                          style={
                            Object {
                              "color": "#F9FAFB",
                              "fontSize": 14,
                            }
                          }
                        >
                          json,root : 
                        </Text>
                      </Text>
                      <Text
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#4D7C0F",
                            "marginLeft": 5,
                          }
                        }
                      >
                        <Text>
                          <Text>
                            {}
                          </Text>
                           
                          1 key
                        </Text>
                      </Text>
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "flexDirection": "row",
                        "marginLeft": 10,
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#F9FAFB",
                          "flexDirection": "row",
                          "marginBottom": 8,
                        }
                      }
                    >
                      <Text
                        style={
                          Object {
                            "color": "#F9FAFB",
                            "fontSize": 14,
                          }
                        }
                      >
                        url,root : 
                      </Text>
                    </Text>
                    <Text
                      style={
                        Object {
                          "color": "#4D7C0F",
                          "marginLeft": 5,
                        }
                      }
                    >
                      <Text
                        style={
                          Object {
                            "color": "#F9FAFB",
                            "fontSize": 14,
                          }
                        }
                      >
                        "https://postman-echo.com/post?query=some%20really%20long%20query%20that%20goes%20onto%20multiple%20lines%20so%20we%20can%20test%20what%20happens" : 
                      </Text>
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`Main test suite should render properly in raw 1`] = `
<View
  style={
    Object {
      "height": "100%",
      "left": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        },
        Object {
          "position": "relative",
        },
      ]
    }
  >
    <RCTScrollView
      horizontal={true}
      style={
        Object {
          "backgroundColor": "#1F2937",
        }
      }
    >
      <View>
        <RCTScrollView
          nestedScrollEnabled={true}
          style={
            Object {
              "paddingBottom": 20,
              "paddingHorizontal": 16,
              "paddingTop": 20,
            }
          }
        >
          <View>
            <Text
              style={
                Object {
                  "color": "#F9FAFB",
                }
              }
            >
              {"args":{"query":"some really long query that goes onto multiple lines so we can test what happens"},"data":{"test":"hello"},"files":{},"form":{},"headers":{"x-forwarded-proto":"https","x-forwarded-port":"443","host":"postman-echo.com","x-amzn-trace-id":"Root=1-605871d5-7bf937ce7fd0d4c0392726bc","content-length":"16","content-type":"application/json","accept":"*/*","x-special":"dev-test","if-none-match":"W/\\"32e-r/l1NhNWVizxAiJazd2G/2G3rHs\\"","accept-language":"en-us","accept-encoding":"gzip, deflate, br","user-agent":"example/1 CFNetwork/1220.1 Darwin/20.3.0","x-others":"Another test with a very very long string just to see how it is render in the application and if it is all done","cookie":"sails.sid=s%3A9fHegW1j43POAQ8xKlXTuE7wfhWp9guw.ZM4PklZGQHdDSAeo7%2FqvaE3LjGdLyf9KcAuv6cK0hpY"},"json":{"test":"hello"},"url":"https://postman-echo.com/post?query=some%20really%20long%20query%20that%20goes%20onto%20multiple%20lines%20so%20we%20can%20test%20what%20happens"}
            </Text>
          </View>
        </RCTScrollView>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`Main test suite should render properly without title 1`] = `
<View
  style={
    Object {
      "height": "100%",
      "left": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        },
        Object {
          "position": "relative",
        },
      ]
    }
  >
    <RCTScrollView
      horizontal={true}
      style={
        Object {
          "backgroundColor": "#1F2937",
        }
      }
    >
      <View>
        <RCTScrollView
          nestedScrollEnabled={true}
          style={
            Object {
              "paddingBottom": 20,
              "paddingHorizontal": 16,
              "paddingTop": 20,
            }
          }
        >
          <View>
            <Text
              style={
                Object {
                  "color": "#F9FAFB",
                }
              }
            >
              {"args":{"query":"some really long query that goes onto multiple lines so we can test what happens"},"data":{"test":"hello"},"files":{},"form":{},"headers":{"x-forwarded-proto":"https","x-forwarded-port":"443","host":"postman-echo.com","x-amzn-trace-id":"Root=1-605871d5-7bf937ce7fd0d4c0392726bc","content-length":"16","content-type":"application/json","accept":"*/*","x-special":"dev-test","if-none-match":"W/\\"32e-r/l1NhNWVizxAiJazd2G/2G3rHs\\"","accept-language":"en-us","accept-encoding":"gzip, deflate, br","user-agent":"example/1 CFNetwork/1220.1 Darwin/20.3.0","x-others":"Another test with a very very long string just to see how it is render in the application and if it is all done","cookie":"sails.sid=s%3A9fHegW1j43POAQ8xKlXTuE7wfhWp9guw.ZM4PklZGQHdDSAeo7%2FqvaE3LjGdLyf9KcAuv6cK0hpY"},"json":{"test":"hello"},"url":"https://postman-echo.com/post?query=some%20really%20long%20query%20that%20goes%20onto%20multiple%20lines%20so%20we%20can%20test%20what%20happens"}
            </Text>
          </View>
        </RCTScrollView>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
